syntax = "proto3";

package grpcservice;

option go_package = "grpcservice/proto";

service URLShortener {
  rpc CreateShortURL(CreateShortURLRequest) returns (CreateShortURLResponse);
  rpc CreateShortURLJSON(CreateShortURLRequestJSON) returns (CreateShortURLResponseJSON);
  rpc GetOriginalURL(GetOriginalURLRequest) returns (GetOriginalURLResponse);
  rpc GetUserShortenedURLs(GetUserShortenedURLsRequest) returns (GetUserShortenedURLsResponse);
  rpc DeleteUserShortenedURLs(DeleteUserShortenedURLsRequest) returns (DeleteUserShortenedURLsResponse);
}

message CreateShortURLRequest {
  string url = 1;
  string token = 2;
}

message CreateShortURLResponse {
  string result = 1;
}

message CreateShortURLRequestJSON {
  string url = 1;
  string token = 2;
}

message CreateShortURLResponseJSON {
  string result = 1;
}


message GetOriginalURLRequest {
  string path = 1;
}

message GetOriginalURLResponse {
  string original_url = 1;
}


message GetUserShortenedURLsRequest {
  string token = 1;
}

message GetUserShortenedURLsResponse {
  repeated string urls = 1;
}


message DeleteUserShortenedURLsRequest {
  string token = 1;
  repeated string urls = 2;
}

message DeleteUserShortenedURLsResponse {}